--- a/resume.tex
+++ b/resume.tex
@@ -12,8 +12,8 @@
 % Template license:
 % CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/)
 %
-   
-       
+    
+        
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Configuration
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -26,7 +26,7 @@
 %%% Configure a directory location for sections
 \newcommand*{\sectiondir}{resume/}
                
-%%% Override color
+%%% Override color 
 % Awesome Colors: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
 %% Color for highlight
@@ -38,11 +38,11 @@
 %\definecolor{text}{HTML}{414141}
 %\definecolor{graytext}{HTML}{414141}
 %\definecolor{lighttext}{HTML}{414141}
-
+                        
 %%% Override a separator for social informations in header(default: ' | ')
 %\headersocialsep[\quad\textbar\quad]
                  
-           
+                   
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     3rd party packages
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -51,6 +51,7 @@
 \usepackage{array} 
 \usepackage{multicol}
 \usepackage{hologo}
+\usepackage{xpatch}
 \setlength{\columnseprule}{1pt}   
 \def\columnseprulecolor{\color{awesome-red}}   
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -65,12 +66,13 @@
 \homepage{samplestat.org} 
 %\github{DespresT}
 \linkedin{tiphainedespres}
-\researchgate{Tiphaine\_Despres} 
+\researchgate{Tiphaine\_Despres}
+\country{Prague, Czech Republic}
 %%% Optionals
 \position{Postdoctorat Fellow{\enskip\cdotp\enskip}Forest Ecologist
   specialize in spatial analyses \& forest structure}
-  
-     
+          
+                         
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Content
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
