--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -2,17 +2,21 @@
 \begin{cventries}
   \cventry
   {Faculty of Forestry and Wood Sciences - Czech University of Life Sciences Prague}
-  {Postdoctorat Fellow}
+  {Postdoctorat Fellow in forest spatial pattern}
   {Nov. 2015 - PRESENT}
     {Prague, Czech Republic}
 {
     \begin{cvitems}
-    \item []{\textnormal{Dynamics of temperate moutain forests in central and eastern Europe (Carpathians). Focusing to link the forest spatial pattern to the disturbance history.}}
+    \item []{\textnormal{Dynamics of temperate moutain forests in
+          central and eastern Europe (Carpathians). Focusing to link
+          the forest spatial pattern to the disturbance
+          history. Working in M. Svoboda team's}}
       \begin{itemize}[label=$\bullet$,topsep=2pt]
       \item {Spatial analysis (point pattern using latest rank
           envelope test development)}
     \item {RandomForest analyses}
-    \item {R programming (creating functions \& packages, parallelization, use SQL database within R)}
+    \item {R programming (creating functions \& packages,
+        parallelization computing, use SQL database within R)}
     \item {Data mining}
       \end{itemize}
       \end{cvitems}
@@ -28,7 +32,7 @@
           students for the courses BIA 1700 Organisms and environment
           (two times), BIO 6600 Fieldwork methodology in ecology (two
           times) – Vegetation component and ENV 9501 Environmental
-          systems dynamic (two times).}}
+          systems dynamic (two times)}}
     \end{cvitems}
   }
   \cventry
@@ -41,11 +45,11 @@
       \begin{cvitems}
       \item []{\textnormal{Worked in collaboration with my supervisor
              H. Asselin (UQAT) and co-supervisors F.
-            Doyon (ISFORT,/UQO) and Y. Bergeron (Industrial Research Chairs NSERC, UQAT-UQAM)}}
+            Doyon (ISFORT,/UQO) and Y. Bergeron (Industrial Research Chairs NSERC, UQAT-UQÀM)}}
       \begin{itemize}[label=$\bullet$,topsep=2pt]
         \item {Reconstitution and modeling of the naturals disturbances dynamic of the sugar maple – yellow birch bioclimatic domain at stand and landscape scale}
-        \item {Dendrochronology, statistical and spatial (point pattern
-            analysis) analysis using R software and LANDIS-II (landscape
+        \item {\textbf{Dendrochronology}, statistical and \textbf{spatial} (point
+            pattern) analysis using R software and LANDIS-II (forest landscape
             modeling)}
       \end{itemize}
       \end{cvitems} 
