--- a/resume/reference.tex
+++ b/resume/reference.tex
@@ -1,4 +1,4 @@
-\cvsection{References}
+\cvsection{Reference}
 \begin{cventries}
   \cventry
     {}
@@ -7,21 +7,44 @@
     {}
     {
       \begin{cvitems}
-          \setlength{\itemindent}{-2em}
-        \item[]  {\normalsize {\color{black}{Hugo Asselin \qquad	\href{mailto:Hugo.Asselin@uqat.ca}{\color{blue!70!black}{\textbf{hugo.asselin@uqat.ca}}}, Professor, Titular of the Canadian Chair in first nation forestry. Département des sciences du développement humain et social Université du Québec en Abitibi-Témiscamingue 445, boulevard de l'Université, Rouyn-Noranda (Québec) J9X 5E4, Canada}}}
+        \setlength{\itemindent}{-2em}
+           \item[]  {\normalsize {\color{black}{\makebox[3.5cm][l]{Miroslav
+                     Svoboda }
+                  \href{mailto:svobodam@fld.czu.cz}{\color[rgb]{0,0,1}{\textbf{svobodam@fld.czu.cz}}},
+                   Professor, head of the department of Forest Ecology, Faculty of
+                   Forestry and Wood Sciences, Czech University of
+                   Life Sciences, Kamýcka 129, Praha 6 Suchdol 16521, Czech Republic}}}
       \item[]{}
-                      \item[]  {\normalsize{\color{black}{Yves
-                              Bergeron	\qquad \href{mailto:Yves.bergeron@uqat.ca}{\color{blue!70!black}{\textbf{yves.bergeron@uqat.ca}}}, Professor, Centre for Forest Research and Natural Sciences and Engineering Research Council-UQAT-UQÀM, Industrial Chair in Sustainable Forest Management. Université du Québec en Abitibi-Témiscamingue 445, boulevard de l'Université, Rouyn-Noranda (Québec) J9X 5E4, Canada.}}}
+        \item[]  {\normalsize {\color{black}{\makebox[3.5cm][l]{Hugo Asselin}	\href{mailto:Hugo.Asselin@uqat.ca}{\color[rgb]{0,0,1}{\textbf{hugo.asselin@uqat.ca}}}, Professor, Titular of the Canadian Chair in first nation forestry. Département des sciences du développement humain et social Université du Québec en Abitibi-Témiscamingue 445, boulevard de l'Université, Rouyn-Noranda (Québec) J9X 5E4, Canada}}}
+      \item[]{}
+                      \item[]  {\normalsize{\color{black}{\makebox[3.5cm][l]{Yves
+                              Bergeron} \href{mailto:Yves.bergeron@uqat.ca}{\color[rgb]{0,0,1}{\textbf{yves.bergeron@uqat.ca}}}, Professor, Centre for Forest Research and Natural Sciences and Engineering Research Council-UQAT-UQÀM, Industrial Chair in Sustainable Forest Management. Université du Québec en Abitibi-Témiscamingue 445, boulevard de l'Université, Rouyn-Noranda (Québec) J9X 5E4, Canada.}}}
                         \item[]{}
-                \item[]  {\normalsize{\color{black}{Frédérik Doyon \qquad	\href{mailto:frederik.doyon@uqo.ca}{\color{blue!70!black}{\textbf{frederik.doyon@uqo.ca}}},
+                \item[]  {\normalsize{\color{black}{\makebox[3.5cm][l]{Frédérik Doyon }	\href{mailto:frederik.doyon@uqo.ca}{\color[rgb]{0,0,1}{\textbf{frederik.doyon@uqo.ca}}},
                     Professor, University of Quebec in Outaouais and
                     Institute of Temperate Forest Science and Centre
                     for Forest Research (ISFORT). Université du Québec
                     en Outaouais, 58 Principale, Ripon, Québec, J0V
                     1V0, Canada.}}}
-                     \item[]{}
-                \item[]  {\normalsize{\color{black}{Gerd Bossinger \qquad	\href{mailto:gerd@unimelb.edu.au}{\color{blue!70!black}{\textbf{gerd@unimelb.edu.au}}}, Associate professor, School of Forest and Ecosystem Science University of Melbourne, Water Street, Creswick, Victoria 3363, Australia.}}}
+             %        \item[]{}
+              %  \item[]  {\normalsize{\color{black}{Gerd Bossinger \qquad	\href{mailto:gerd@unimelb.edu.au}{\color{blue!70!black}{\textbf{gerd@unimelb.edu.au}}}, Associate professor, School of Forest and Ecosystem Science University of Melbourne, Water Street, Creswick, Victoria 3363, Australia.}}}
                         \end{cvitems}
     }
  
   \end{cventries}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
