--- a/resume/scholarship.tex
+++ b/resume/scholarship.tex
@@ -1,19 +1,19 @@
 \cvsection{Scholarship}
 \begin{cvhonors}
   \cvhonor
-    {Jean-Jacques Cossette scholarship}
+    {\normalsize Jean-Jacques Cossette scholarship}
     {for exceptional forestry research – from UQAT foundation}
     {Qc, Canada}
-    {2012}
- \cvhonor
-    {}
-    {}
-    {}
-    {}
+    {\normalsize 2012}
+ \end{cvhonors}
+
+ 
+\begin{cvhonors}
+
     \cvhonor
-    {International mobility scholarship}
+    {\normalsize International mobility scholarship}
     {for my Australian training – from University Lyon 1}
     {Lyon, France}
-    {2008}
+    {\normalsize 2008}
 
 \end{cvhonors}
