--- a/resume/skilllong.tex
+++ b/resume/skilllong.tex
@@ -2,7 +2,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Skills}
+\cvsection{Skill}
 
 
 %-------------------------------------------------------------------------------
@@ -15,28 +15,40 @@
 %---------------------------------------------------------
   \cvskilllong
     {R programming} % Category
-    {\textnormal{\textbf{Build packages, functions, parallelization,
-          manage SQL database}. Mixed models, glm, lm, PCA, RDA, spatial analysis (point pattern analysis), parametric tests (t test, ANOVA …), none parametric test (chi-square test Wilcoxon test…), survival test, ANCOVA, AIC, etc.}} % Skills
+    {\textnormal{\textbf{Build packages, data mining, parallelization,
+          functions}, manage SQL database}} % Skills
 
-%---------------------------------------------------------
+    % ---------------------------------------------------------
+  \cvskilllong
+    {Statistic} % Category
+    {\textnormal{RandomForest, regression trees, \textbf{mixed models}, AIC, glm, lm,
+           \textbf{multivariate analysis} (PCA, RDA, etc.), \textbf{spatial analysis} (point pattern
+          analysis, rank envelope test), parametric tests (t test, ANOVA etc.), none
+          parametric test (chi-square test, Wilcoxon test, etc.),
+          survival test, ANCOVA, etc.}} % Skills
+
+      % ---------------------------------------------------------
   \cvskilllong
     {Landscape Modeling} % Category
-    {\textnormal{LANDIS-II (model forest biomass, disturbance)}} % Skills
+    {\textnormal{LANDIS-II (modeling forest biomass, regeneration, disturbances,
+        harvesting scenario, climatic and soil data)}} % Skills
 
 %---------------------------------------------------------
   \cvskilllong
-    {Linux} % Category
-    {\textnormal{Emacs, org-mode, {\LaTeX}, \hologo{BibTeX}, Git}} % Skills
+    {GNU/Linux} % Category
+    {\textnormal{Emacs (ESS, org-mode), {\LaTeX}, \hologo{BibTeX}, Git}} % Skills
 
+   
 %---------------------------------------------------------
   \cvskilllong
     {GIS} % Category
-    {\textnormal{ArcGIS, QGIS.}} % Skills
-    
+    {\textnormal{ArcGIS, QGIS (handling
+        projections, importing GPS data, creating basic maps)}} % Skills
+   
  %---------------------------------------------------------
   \cvskilllong
     {Windows} % Category
-    {\textnormal{Office suite, Photoshop, In Design}} % Skills
+    {\textnormal{Office suite, Photoshop, In Design, etc.}} % Skills
     
 
 
@@ -44,7 +56,7 @@
   {Personal skills}
   {\textnormal{Rigour, autonomy, organization and confidence, team and autonomy
     working, teaching, fast and efficient decisions making, multi-task
-    management, Usable synthesis report by everyone}}
+    management}}
 
 %---------------------------------------------------------
   \cvskilllong
