--- a/resume.tex
+++ b/resume.tex
@@ -12,7 +12,7 @@
 % Template license:
 % CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/)
 %
-    
+  
         
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Configuration
@@ -22,10 +22,10 @@
                   
 %%% Override a directory location for fonts(default: 'fonts/')
 \fontdir[fonts/]
-      
+       
 %%% Configure a directory location for sections
 \newcommand*{\sectiondir}{resume/}
-               
+                 
 %%% Override color 
 % Awesome Colors: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
@@ -93,7 +93,6 @@
 \import{\sectiondir}{publication.tex}
 \import{\sectiondir}{reference.tex}
 \import{\sectiondir}{scholarship.tex}
-\import{\sectiondir}{presentation.tex}
-%\%import{\sectiondir}{committees.tex}
-        
+\import{\sectiondir}{committees.tex}
+\import{\sectiondir}{presentation.tex}  
 \end{document}          
