--- a/resume/committees.tex
+++ b/resume/committees.tex
@@ -1,13 +1,16 @@
 \cvsection{Program Committees}
-\begin{cvhonors}
-  \cvhonor
-    {Organizer \& Co-director}
-    {1st POSTECH Hackathon}
-    {S.Korea}
-    {2013}
-  \cvhonor
-    {Staff \& Problem Writer}
-    {JFF(Just for Fun) Hacking Competition}
-    {S.Korea}
-    {2012}
-\end{cvhonors}
+\begin{cventries}
+\cventry
+    {Basile S.[President], \textbf{Després T.[Budget]}, Landry
+      V.[Webmaster], Oris, F.[Sescretary \& Webmaster], Ouarmim S.[Budget],
+      Coulombe S.[Member] \& Uprety Y.[Member]}
+    {ACUN's Student Conference On Northern Studies}
+    {Val d'Or, Canada}
+    {Nov. 2012}
+    {
+      \begin{cvitems}
+      \item []{I was part of the organising committee  as the
+          Treasurer. 70 people were attending the conference for a budget of 60~000~\$CA. {\href{http://www.uqat.ca/sce2012/?lang=en\&menu=home}{[\color[rgb]{0,0,1}{\textbf{http://www.uqat.ca/sce2012/?lang=en\&menu=home}]}}}}
+      \end{cvitems}
+    }  
+ \end{cventries}
