--- a/resume.tex
+++ b/resume.tex
@@ -13,7 +13,7 @@
 % CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/)
 %
   
-        
+         
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Configuration
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -22,10 +22,10 @@
                   
 %%% Override a directory location for fonts(default: 'fonts/')
 \fontdir[fonts/]
-       
+                      
 %%% Configure a directory location for sections
 \newcommand*{\sectiondir}{resume/}
-                 
+                         
 %%% Override color 
 % Awesome Colors: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
@@ -41,8 +41,8 @@
                         
 %%% Override a separator for social informations in header(default: ' | ')
 %\headersocialsep[\quad\textbar\quad]
-                 
-                   
+                  
+                
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     3rd party packages
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -72,7 +72,7 @@
 \position{Postdoctorat Fellow{\enskip\cdotp\enskip}Forest Ecologist
   specialize in spatial analyses \& forest structure}
           
-                         
+                        
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Content
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -85,14 +85,15 @@
 \begin{document}
 %%% Make a header for CV with personal data
 \makecvheader    
-   
+              
 %%% Import contents
 \import{\sectiondir}{skilllong.tex}
 \import{\sectiondir}{education.tex}
 \import{\sectiondir}{experience.tex}
 \import{\sectiondir}{publication.tex}
 \import{\sectiondir}{reference.tex}
+\newpage
 \import{\sectiondir}{scholarship.tex}
 \import{\sectiondir}{committees.tex}
 \import{\sectiondir}{presentation.tex}  
-\end{document}          
+\end{document}                      
