--- a/resume/committees.tex
+++ b/resume/committees.tex
@@ -1,4 +1,5 @@
 \cvsection{Program Committees}
+\vspace{-8pt}
 \begin{cventries}
 \cventry
     {Basile S.[President], \textbf{Després T.[Budget]}, Landry
@@ -10,7 +11,7 @@
     {
       \begin{cvitems}
       \item []{I was part of the organising committee  as the
-          Treasurer. 70 people were attending the conference for a budget of 60~000~\$CA. {\href{http://www.uqat.ca/sce2012/?lang=en\&menu=home}{[\color[rgb]{0,0,1}{\textbf{http://www.uqat.ca/sce2012/?lang=en\&menu=home}]}}}}
+          Treasurer. 70 people were attending the conference for a budget of 60~000~\$CA. {\href{http://www.uqat.ca/sce2012/?lang=en\&menu=home}{[\color[rgb]{0,0,1}{\textbf{http://www.uqat.ca/sce2012/?lang=en\&menu=home}}}]}}
       \end{cvitems}
     }  
  \end{cventries}
