--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -1,4 +1,5 @@
 \cvsection{Experience}
+\vspace{-8pt}
 \begin{cventries}
   \cventry
   {Faculty of Forestry and Wood Sciences - Czech University of Life Sciences Prague}
@@ -20,8 +21,10 @@
     \item {Data mining}
       \end{itemize}
       \end{cvitems}
-  }
-  \cventry
+    }
+
+\vspace{-3pt}
+    \cventry
   {University of Québec at Montréal}
   {Teaching assistant}
   {Feb. – Aug. 2014 \& Jan. - Dec. 2015}
@@ -35,6 +38,8 @@
           systems dynamic (two times)}}
     \end{cvitems}
   }
+
+
   \cventry
   {Centre for Forest Research - University of Québec in Abitibi-Témiscamingue}
   {PhD in Environmental Sciences on the natural disturbances dynamic
@@ -54,7 +59,9 @@
       \end{itemize}
       \end{cvitems} 
     }
-  \cventry
+
+
+    \cventry
   {ENTPE - Environmental Science Laboratory \& CNRS Unit 5023}
   {Master training on the lentic aquatic ecosystem organism responses representative to a chronic exposition to percolated water of contaminated marine sediment.}
   {Jan. 2010 - Jun. 2010}
@@ -67,7 +74,9 @@
           \end{itemize}
 \end{cvitems} 
   }
-    \cventry
+
+
+  \cventry
   {CNRS Unit 5558 - Biometry and Evolutionary Biology laboratory}
   {Training on the impact of an organophosphorus pesticide on the interspecific mating of two trichogramma species, \textit{Trichogramma semblidis} and \textit{T. evanescens.}}
   {Feb. 2009 - Jun. 2009}
@@ -79,7 +88,9 @@
     \item {Statistical analyses with R software – Chi-square test, logrank test (Survival analysis)}
               \end{itemize}
 \end{cvitems} 
-  }
+}
+
+
       \cventry
   {Forest and Ecosystem Science - University of Melbourne}
   {Training on the phylogeography of \textit{Eucalyptus regnans}, \textit{E. Delegatensis} and \textit{E. Obliqua} population’s}
@@ -96,7 +107,9 @@ item {Participated to a scientific project from beginning to end
               \end{itemize}
 \end{cvitems} 
   }
-        \cventry
+
+
+  \cventry
   {CNRS Unit 5558 - Biometry and Evolutionary Biology laboratory}
   {Training on the roe population repartition in an Experimentation and Study Territory}
   {Oct. 2007 - Jan. 2008}
