--- a/resume/skill.tex
+++ b/resume/skill.tex
@@ -17,27 +17,27 @@
 %---------------------------------------------------------
   \cvskillscol
     {R } % Category
-    {\textnormal{\textbf{(build packages, functions, parallelization, SQL.)}. Mixed models, glm, lm, PCA, RDA, spatial analysis (point pattern analysis), parametric tests (t test, ANOVA …), none parametric test (chi-square test Wilcoxon test…), survival test, ANCOVA, AIC, etc.}} % Skills
+    {{\textnormal\textbf{(build packages, functions, parallelization, SQL.)}. Mixed models, glm, lm, PCA, RDA, spatial analysis (point pattern analysis), parametric tests (t test, ANOVA …), none parametric test (chi-square test Wilcoxon test…), survival test, ANCOVA, AIC, etc.}} % Skills
 
 %---------------------------------------------------------
   \cvskillscol
     {Modeling} % Category
-    {\textnormal{LANDIS-II (model forest biomass, disturbance, at the landscape scale)}} % Skills
+    {LANDIS-II (model forest biomass, disturbance, at the landscape scale)} % Skills
 
 %---------------------------------------------------------
   \cvskillscol
     {Linux} % Category
-    {\textnormal{Emacs, org-mode, {\LaTeX}, BibTex, Git}} % Skills
+    {Emacs, org-mode, LaTeX, BibTex, Git} % Skills
 
 %---------------------------------------------------------
   \cvskillscol
     {GIS} % Category
-    {\textnormal{ArcGIS, QGIS.}} % Skills
+    {ArcGIS, QGIS.} % Skills
     
  %---------------------------------------------------------
   \cvskillscol
     {Windows} % Category
-    {\textnormal{Office suite, Photoshop, In Design}} % Skills
+    {Office suite, Photoshop, In Design} % Skills
     
 %---------------------------------------------------------
   \cvskillscol
